apps/transmission/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
      annotations:
        homelab.dev/rollout-nonce: "2025-11-16-01"
    spec:
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: transmission-config
        - name: downloads
          hostPath:
            path: /downloads
            type: Directory
      containers:
        - name: transmission
          image: ghcr.io/linuxserver/transmission@sha256:bd9d4858be1138787cd3e4d05d2f8be72ab24685117361f47184f95d9215d859
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9091
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
          resources:
            requests:
              cpu: 50m
              memory: 384Mi
            limits:
              memory: 1Gi
