apps/transmission/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  selector:
    app: transmission
  ports:
    - name: http
      port: 80
      targetPort: 9091
